fix extension namespaces

--- a/Resources/config/services.yaml
+++ b/Resources/config/services.yaml
@@ -1,5 +1,5 @@
 services:
-    RavenFlux\VairogsHelper\TextExtension:
+    RavenFlux\VairogsHelper\Text\Extension:
         public: false
         tags:
             -
